Refactor Dockerfile for improved efficiency
Updated Dockerfile to use Alpine base image, optimize dependency installation, and change the start command.

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,20 +1,17 @@
-# 1. Choose base image (Node runtime + Linux)
-FROM node:18
+FROM node:18-alpine
 
-# 2. Set working directory inside container
 WORKDIR /app
 
-# 3. Copy only package files first
+# Install dependencies first (better caching)
 COPY package*.json ./
+RUN npm ci --only=production
 
-# 4. Install dependencies
-RUN npm install
-
-# 5. Copy rest of the backend code
+# Copy source code
 COPY . .
 
-# 6. Tell Docker which port the app uses
 EXPOSE 5000
 
-# 7. Command to start the Express app
-CMD ["node", "index.js"]
+# Don't run as root
+USER node
+
+CMD ["node", "server.js"]
