--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,7 +7,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
+    location /api/ {
         proxy_pass http://backend-service:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -16,24 +16,3 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 }
-```
-
----
-
-## 4. Root .dockerignore files
-
-In `backend/` → **Add file** → `.dockerignore`:
-```
-node_modules
-npm-debug.log
-.env
-.git
-```
-
-In `frontend/` → **Add file** → `.dockerignore`:
-```
-node_modules
-npm-debug.log
-build
-.env
-.git
